# c4nnect

./: .hgignore  CMakeLists.txt  benchmark.c  benchmark.h  board.c  board.eps  board.h  board2eps.c  board2eps.h  board_test.c  board_test.h  doxygen.conf  eval.c  eval.h  eval_test.c  eval_test.h  main.c  minunit.h  parser.c  parser.h  parser_test.c  parser_test.h  search.c  search.h  search_test.c  search_test.h  stats.c  stats.h  stats_test.c  stats_test.h  tournament.c  tournament.h  ttable.c  ttable.h  ttable.ser  ttable_test.c  ttable_test.h  ucitable_test.c  util.c  util.h
doc/: evaluation.txt
include/: board.h  board2eps.h  configure.h.in  parser.h  search.h  stats.h  ucitable.h  util.h
nbproject/: Makefile-Benchmark-64.mk  Makefile-Benchmark.mk  Makefile-Debug-64-AB-TT.mk  Makefile-Debug-64-AB.mk  Makefile-Debug-64-TT.mk  Makefile-Debug-64.mk  Makefile-Debug-AB-TT.mk  Makefile-Debug-AB.mk  Makefile-Debug-TT.mk  Makefile-Debug.mk  Makefile-Release-64.mk  Makefile-Release-AB.mk  Makefile-Release-TT-AB.mk  Makefile-Release-TT.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Benchmark-64.bash  Package-Benchmark.bash  Package-Debug-64-AB-TT.bash  Package-Debug-64-AB.bash  Package-Debug-64-TT.bash  Package-Debug-64.bash  Package-Debug-AB-TT.bash  Package-Debug-AB.bash  Package-Debug-TT.bash  Package-Debug.bash  Package-Release-64.bash  Package-Release-AB.bash  Package-Release-TT-AB.bash  Package-Release-TT.bash  Package-Release.bash  configurations.xml  project.xml
src/: benchmark.c  board.c  board2eps.c  eval.c  parser.c  search.c  stats.c  ttable.c  ucitable.c  util.c
test/: board_test.c  eval_test.c  eval_test.h  minunit.h  parser_test.c  search_test.c  search_test.h  stats_test.c  test.c  ucitable_test.c  ucitable_test.h
web/: client.css  client.html  client.js  server.c  server.py
